[package]
name = "OcuLED"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontdue = "0.6.2"
chrono = "0.4"
image = "0.23"
hotkey = "0.3"

[dependencies.windows]
version = "0.30"
features = [
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
]